# meow-godot-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  SConstruct
.claude/skills/: release.md
.github/: RELEASE_NOTES.md
.github/workflows/: builds.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.2-MILESTONE-AUDIT.md
.planning/debug/: mcp-connect-message-spam.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md
.planning/phases/01-foundation-first-tool/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md
.planning/phases/02-scene-crud/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-script-project-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-editor-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-runtime-signals-distribution/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md  05-VALIDATION.md
.planning/phases/06-scene-file-management/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-RESEARCH.md
.planning/phases/07-ui-system/: 07-01-SUMMARY.md  07-02-PLAN.md  deferred-items.md
.planning/phases/08-animation-system/: 08-02-PLAN.md  08-02-SUMMARY.md  08-RESEARCH.md
.planning/phases/09-editor-viewport-screenshots/: 09-01-PLAN.md  09-02-PLAN.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-VALIDATION.md
.planning/phases/10-running-game-bridge/: 10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md
.planning/phases/11-prompt-templates/: 11-01-PLAN.md  11-01-SUMMARY.md  11-VALIDATION.md
.planning/phases/12-input-injection-enhancement/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/phases/13-runtime-state-query/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-CONTEXT.md  13-VERIFICATION.md
.planning/phases/14-game-output-enhancement/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-CONTEXT.md  14-VERIFICATION.md
.planning/phases/15-integration-testing-toolkit/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-CONTEXT.md  15-VERIFICATION.md
.planning/phases/16-game-bridge-auto-wait/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md  16-CONTEXT.md
.planning/phases/17-reliable-game-output/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-CONTEXT.md
.planning/phases/18-tool-ergonomics/: 18-01-PLAN.md  18-01-SUMMARY.md  18-CONTEXT.md
.planning/phases/22-smart-error-handling/: 22-01-PLAN.md  22-01-SUMMARY.md  22-02-PLAN.md  22-02-SUMMARY.md  22-CONTEXT.md  22-RESEARCH.md  22-VALIDATION.md  22-VERIFICATION.md
.planning/phases/23-enriched-resources/: 23-01-PLAN.md  23-01-SUMMARY.md  23-02-PLAN.md  23-02-SUMMARY.md  23-CONTEXT.md  23-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bridge/: main.cpp  stdio_transport.cpp  stdio_transport.h  tcp_client.cpp  tcp_client.h
project/: backpack_ui.gd  backpack_ui.tscn  hello_world.gd  hello_world.tscn  kcw_backpack.gd  kcw_backpack.tscn  log_test_scene.gd  log_test_scene.tscn  login_ui.gd  login_ui.tscn  project.godot  subagent_test.gd  subagent_test.tscn  test_root.tscn
project/addons/godot_mcp_meow/: plugin.cfg  (+1 more)
src/: animation_tools.cpp  animation_tools.h  composite_tools.cpp  composite_tools.h  error_enrichment.cpp  error_enrichment.h  game_bridge.cpp  game_bridge.h  mcp_dock.cpp  mcp_dock.h  mcp_plugin.cpp  mcp_plugin.h  mcp_prompts.cpp  mcp_prompts.h  mcp_protocol.cpp  mcp_protocol.h  mcp_server.cpp  mcp_server.h  mcp_tool_registry.cpp  mcp_tool_registry.h  physics_tools.cpp  physics_tools.h  project_tools.cpp  project_tools.h  register_types.cpp  register_types.h  resource_tools.cpp  resource_tools.h  runtime_tools.cpp  runtime_tools.h  scene_file_tools.cpp  scene_file_tools.h  scene_mutation.cpp  scene_mutation.h  scene_tools.cpp  scene_tools.h  script_tools.cpp  script_tools.h  signal_tools.cpp  signal_tools.h  (+8 more)
tests/: CMakeLists.txt  test_composite_tools.cpp  test_error_enrichment.cpp  test_prompts.cpp  test_protocol.cpp  test_resource_tools.cpp  test_scene_mutation.cpp  test_scene_tree.cpp  test_script_tools.cpp  test_tool_registry.cpp  test_variant_parser.cpp  uat_crash_repro.py  uat_integration.py  uat_phase10.py  uat_phase11.py  uat_phase12.py  uat_phase13.py  uat_phase14.py  uat_phase15.py  uat_phase16.py  uat_phase17.py  uat_phase18.py  uat_phase2.cjs  uat_phase3.py  uat_phase4.py  uat_phase5.py  uat_phase6.py  uat_phase7.py  uat_phase8.py  uat_phase9.py  uat_v14_2d_tools.py  uat_v15_ai_workflow.py
(+76 files in other folders)
